[project]
name = "porkhollow"
version = "0.1.0"
description = ""
authors = [
    { name = "John Leen <jleen@saturnvalley.org>" }
]
requires-python = ">=3.8"
dependencies = [
    "tabulate >=0.8.9"
]

[project.scripts]
rebalance = 'porkhollow.rebalance:rebalance'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
